jatkuva deployaaminen toivottavasti hanskassa

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,11 @@ script:
  - RAILS_ENV=test bundle exec rake db:migrate --trace
  - bundle exec rake db:test:prepare
  - bundle exec rspec -fd spec/
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: "deploy:
+  provider: heroku
+  api_key:
+    secure: "5accb46e-d38c-4634-8767-d4682da75a39"
